# C-How-To-Program-By-Paul-Dietel-And-Harvey-Dietel

./: .gitignore  README.md  tempCodeRunnerFile.c
.github/workflows/: c.yml
chpt3/: a.out  classAverage  classAverage.c  grade.c  main.c
chpt3-assignment/: CMakeLists.txt  interestCalculator.c  main.c  mortgageCalculator.c  salaryCalculator.c  salesCommissionCalculator.c  sat.c
chpt4/: 4_10  4_10.c  4_17  4_17.c  4_18  4_18.c  4_19  4_19.c  4_20  4_20.c  4_21  4_21.c  4_27  4_27.c  4_29  4_29.c  4_30.c  4_31  4_32.c  4_40  4_40.c  4_7  4_7.c  4_9  4_9.c  ali.c  favour  favour.c  fig4_7.c  tempCodeRunnerFile  tempCodeRunnerFile.c  tempCodeRunnerFile.python
chpt4/4_19.dSYM/Contents/: Info.plist
chpt4/4_19.dSYM/Contents/Resources/DWARF/: 4_19
chpt5/: 5_10.c  5_11.c  5_12.md  5_13.c  5_14.c  5_15.c  5_16.c  5_17.c  5_18.c  5_19.c  5_20.c
codesample/: grade  main.c  sum.cpp
codesamples/: 2.c  benzene  grade.c  prime_numbers_range  prime_numbers_range.c  tempCodeRunnerFile.c
equality/: main.c  test.c
examples/ch01/GuessNumber/GNU/: GuessNumber
